correction ellipsis + animation

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -44,7 +44,7 @@
                                         Ravioles de foie gras
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Accompagnés de leur crème à la truffe
                                         </p>
                                         <p class="menuCard__price">
@@ -66,7 +66,7 @@
                                         Caviar osciètre
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Sur blini à la farine de blé noir
                                         </p>
                                         <p class="menuCard__price">
@@ -88,7 +88,7 @@
                                         Homard et espuma de potiron
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Mariné aux zestes d'orange
                                         </p>
                                         <p class="menuCard__price">
@@ -110,7 +110,7 @@
                                         Foie gras de canard cuit entier
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Confiture de figue et pain toasté
                                         </p>
                                         <p class="menuCard__price">
@@ -140,7 +140,7 @@
                                         Noix de coquilles Saint-Jacques
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Sur lit de purée de céleri-rave
                                         </p>
                                         <p class="menuCard__price">
@@ -162,7 +162,7 @@
                                         Langoustine poêlée
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Purée de patate douce
                                         </p>
                                         <p class="menuCard__price">
@@ -184,7 +184,7 @@
                                         Mijoté de queue de boeuf 
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et riz sauvage aux zestes de citron
                                         </p>
                                         <p class="menuCard__price">
@@ -214,7 +214,7 @@
                                         Macaron noisette et chocolat
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Glace au caramel brun et sel de Guérande
                                         </p>
                                         <p class="menuCard__price">
@@ -236,7 +236,7 @@
                                         Baba au rhum revisité
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Avec son coulis de citron
                                         </p>
                                         <p class="menuCard__price">
@@ -258,7 +258,7 @@
                                         Tarte au citron meringuée 
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Déstructurée
                                         </p>
                                         <p class="menuCard__price">
