--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -45,7 +45,7 @@
                                         Fricassée d'escargot
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Au piment d'espelette
                                         </p>
                                         <p class="menuCard__price">
@@ -67,7 +67,7 @@
                                         Foie gras de canard mi-cuit
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et ses copeaux de truffe noire
                                         </p>
                                         <p class="menuCard__price">
@@ -89,7 +89,7 @@
                                         Oeuf au plat
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Assaisonné à la truffe sur lit de caviar
                                         </p>
                                         <p class="menuCard__price">
@@ -119,7 +119,7 @@
                                         Filet de boeuf aux herbes
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Accompagné de sa ribambelle de légumes
                                         </p>
                                         <p class="menuCard__price">
@@ -141,7 +141,7 @@
                                         Parmentier de queue de boeuf
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             À la truffe noire sur sa purée de panais
                                         </p>
                                         <p class="menuCard__price">
@@ -163,7 +163,7 @@
                                         Filet de turbot
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Aux agrumes
                                         </p>
                                         <p class="menuCard__price">
@@ -193,7 +193,7 @@
                                         Paris-Brest
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Revisité
                                         </p>
                                         <p class="menuCard__price">
@@ -215,7 +215,7 @@
                                         Macaron au chocolat d'exception
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et glace à la vanille de Madagascar
                                         </p>
                                         <p class="menuCard__price">
@@ -237,7 +237,7 @@
                                         Mousse au chocolat
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Au piment d'Espelette et à la truffe noire
                                         </p>
                                         <p class="menuCard__price">
