--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -44,7 +44,7 @@
                                         Tartare de poulpe acidulé
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Aux zestes d'orange
                                         </p>
                                         <p class="menuCard__price">
@@ -66,7 +66,7 @@
                                         Velouté de légumes d'antan
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Carotte, panais, topinambour
                                         </p>
                                         <p class="menuCard__price">
@@ -88,7 +88,7 @@
                                         Soupe à l'oignon
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Revisité
                                         </p>
                                         <p class="menuCard__price">
@@ -118,7 +118,7 @@
                                         Coquilles Saint-Jacques
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Accompagnées d'une purée de panais
                                         </p>
                                         <p class="menuCard__price">
@@ -140,7 +140,7 @@
                                         Magret de canard
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et parmentier de pommes de terre
                                         </p>
                                         <p class="menuCard__price">
@@ -162,7 +162,7 @@
                                         Pigeonneau d’Ille-et-Vilaine 
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Sur son lit de gnocchis aux légumes
                                         </p>
                                         <p class="menuCard__price">
@@ -192,7 +192,7 @@
                                         Pétales de violettes glacés
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et purée de noisettes
                                         </p>
                                         <p class="menuCard__price">
@@ -214,7 +214,7 @@
                                         Fondant au chocolat
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Revisité
                                         </p>
                                         <p class="menuCard__price">
@@ -236,7 +236,7 @@
                                         Millefeuille croustillant 
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Myrtilles et pâte d’amande
                                         </p>
                                         <p class="menuCard__price">
