--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -44,7 +44,7 @@
                                         Tartare de thon
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Assaisonné au yuzu
                                         </p>
                                         <p class="menuCard__price">
@@ -66,7 +66,7 @@
                                         Bouchée de homard croustillant
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et sa farandole de petits légumes
                                         </p>
                                         <p class="menuCard__price">
@@ -88,7 +88,7 @@
                                         Velouté de cèpes
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Aux truffes
                                         </p>
                                         <p class="menuCard__price">
@@ -118,7 +118,7 @@
                                         Poulet rôti aux herbes de Provence
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et sa crème de truffe
                                         </p>
                                         <p class="menuCard__price">
@@ -140,7 +140,7 @@
                                         Langouste rôtie
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et ses légumes de saison
                                         </p>
                                         <p class="menuCard__price">
@@ -162,7 +162,7 @@
                                         Côte de boeuf Angus
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Et sa purée de panais
                                         </p>
                                         <p class="menuCard__price">
@@ -192,7 +192,7 @@
                                         Farandole de desserts
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Du chef
                                         </p>
                                         <p class="menuCard__price">
@@ -214,7 +214,7 @@
                                         Crème brulée
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             Revisitée
                                         </p>
                                         <p class="menuCard__price">
@@ -236,7 +236,7 @@
                                         Tiramisu
                                     </h3>
                                     <div class="menuCard__description">
-                                        <p class="menuCard_name">
+                                        <p class="menuCard__name">
                                             À la noisette
                                         </p>
                                         <p class="menuCard__price">
